--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
+openpyxl = "^3.1.4"
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.lint.dependencies]
